force-app/main/default/objects/service_req_form__c/service_req_form__c.object-meta.xml
<CustomObject>
    <label>service req form</label>
    <nameField>
        <displayFormat>SRF-{0000}</displayFormat>
        <label>service req form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>service req forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>