force-app/main/default/objects/service_req_form__c/fields/DELIVERY_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>DELIVERY_LOCATION__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DELIVERY LOCATION</label>
    <referenceTo>location__c</referenceTo>
    <relationshipLabel>service req forms</relationshipLabel>
    <relationshipName>service_req_forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>