force-app/main/default/objects/service_req_form__c/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <label>NOTES</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>