force-app/main/default/objects/service_req_form__c/fields/SMB_CUSTOMER_account__c.field-meta.xml
<CustomField>
    <fullName>SMB_CUSTOMER_account__c</fullName>
    <label>SMB CUSTOMER(account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>service req forms</relationshipLabel>
    <relationshipName>service_req_forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>